# 04-Web-HW

./: Dockerfile  README.md  main.py  pyproject.toml
storage/: data.json
